--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
         // CONFIG WAJIB ADA databaseURL
         const firebaseConfig = {
             apiKey: "AIzaSyDM7CbQta097nqWty-qRsQ2otpS9TwKiI8",
-            authDomain: "testled-5754b.firebaseapp.com",
+            authDomain: "minggu-11-5e791.firebaseapp.com",
             databaseURL: "https://minggu-11-5e791-default-rtdb.firebaseio.com",
             projectId: "minggu-11-5e791",
             storageBucket: "minggu-11-5e791.firebasestorage.app",
@@ -119,3 +119,4 @@
 
 </body>
 </html>
+
