--- a/Index.html
+++ b/Index.html
@@ -47,13 +47,14 @@
     <script>
         // CONFIG WAJIB ADA databaseURL
         const firebaseConfig = {
-            apiKey: "AIzaSyDM7CbQta097nqWty-qRsQ2otpS9TwKiI8",
-            authDomain: "minggu-11-5e791.firebaseapp.com",
-            databaseURL: "https://minggu-11-5e791-default-rtdb.firebaseio.com",
-            projectId: "minggu-11-5e791",
-            storageBucket: "minggu-11-5e791.firebasestorage.app",
-            messagingSenderId: "573469373520",
-            appId: "1:573469373520:web:dc29f317f45c5943590d55"
+          apiKey: "AIzaSyDM7CbQta097nqWty-qRsQ2otpS9TwKiI8",
+          authDomain: "minggu-11-5e791.firebaseapp.com",
+          databaseURL: "https://minggu-11-5e791-default-rtdb.firebaseio.com",
+          projectId: "minggu-11-5e791",
+          storageBucket: "minggu-11-5e791.firebasestorage.app",
+          messagingSenderId: "573469373520",
+          appId: "1:573469373520:web:fe9e368170fe214c590d55",
+          measurementId: "G-X3J1Y4LP41"
         };
 
         // INIT FIREBASE V8
@@ -119,4 +120,5 @@
 
 </body>
 </html>
+
 
